--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
   },
   "homepage": "https://github.com/bogdan9898/proiect-tw#readme",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "http": "0.0.0",
-    "nodemon": "^1.18.11",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
+    "mongoose": "^5.5.5",
     "nunjucks": "^3.2.0",
+    "parse-multipart": "^1.0.4",
     "url-parse": "^1.4.6",
     "util": "^0.11.1",
     "uuid": "^3.3.2"
