--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
   "homepage": "https://github.com/bogdan9898/proiect-tw#readme",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "cheerio": "^1.0.0-rc.3",
     "http": "0.0.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.5.5",
+    "multiparty": "^4.2.1",
     "nunjucks": "^3.2.0",
-    "parse-multipart": "^1.0.4",
     "url-parse": "^1.4.6",
     "util": "^0.11.1",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "xmlhttprequest": "^1.8.0"
   }
 }
