--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/bogdan9898/proiect-tw#readme",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "chart.js": "^2.8.0",
     "cheerio": "^1.0.0-rc.3",
     "http": "0.0.0",
     "jsonwebtoken": "^8.5.1",
